--- a/public/views/home.handlebars
+++ b/public/views/home.handlebars
@@ -9,13 +9,14 @@
                     <table class="table">
                         <thead>
                         <tr>
-                            <th scope="col">Sec Number</th><th scope="col">Player</th>
+                            <th scope="col">Player Position</th><th scope="col">Player</th>
                             <th scope="col">Value</th>
                             <th scope="col">Team</th>
                             <th scope="col">Action</th>
                         </tr>
                         </thead>
                         <tbody>
+                        <!--handlebars for each-->
                         {{#each players}}
                         <form action="/delete" method="POST">
                             <input type="hidden" value="{{_id}}" name="id">
