--- a/public/views/layouts/main.handlebars
+++ b/public/views/layouts/main.handlebars
@@ -10,6 +10,8 @@
     <meta name="author" content="">
     <title>NBA App</title>
     <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="assets/css/nba.css">
+    <link rel="stylesheet" href="public/assets/bootstrap.min.js"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
@@ -17,15 +19,15 @@
     <!-- Navigation -->
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-        <div class="container"> <a class="navbar-brand" href="#">NBA</a>
+        <div class="container"> <a class="navbar-brand" href="#">NBA App</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">	<span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active"><a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">New Players</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">PlayOffs</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">MVP</a></li>
                 </ul>
             </div>
         </div>
