Player collum added

--- a/public/views/home.handlebars
+++ b/public/views/home.handlebars
@@ -10,6 +10,7 @@
                         <thead>
                         <tr>
                             <th scope="col">Player Position</th>
+                            <th scope="col">Player</th>
                             <th scope="col">Value</th>
                             <th scope="col">Team</th>
                             <th scope="col" colspan= "2">Action</th>
