--- a/public/views/home.handlebars
+++ b/public/views/home.handlebars
@@ -22,7 +22,7 @@
                             <tr>
                                 <form action="/{{_id}}" method="POST">
                                     <input type="hidden" name="_method" value="PUT">
-                                    <td><input type="text" class="form-control" value="{{secIn}}" disabled></td>
+                                    <td><input type="text" class="form-control" value="{{secIn}}">disabled</td>
                                     <td><input class="form-control" pattern="[A-Za-z]{1,32}" type="text" name="player"
                                                value="{{player}}"></td>
                                     <td><input class="form-control" type="number" name="value" value="{{value}}"></td>
